changed homepage desciption

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
             <div class="home-content">
                 <h3>Hi, It's Me</h3>
                 <h1>Steven Gueta</h1>
-                <h3>I'm a <span>Frontend Developer</span></h3>
-                <p> As a Frontend Developer and an artist with versatile skills, I am poised to
-                    enhance and revolutionize the visual representation of your company. </p>
+                <h3>I'm a <span>Creative Enthusiast</span></h3>
+                <p> I'm a creative enthusiast with a passion for bringing ideas to life through video editing, graphic design, videography, and web design. Whether it's crafting engaging visuals, telling compelling stories through video, or designing sleek and functional websites, I love turning concepts into reality.
+
+                    With experience in multimedia production, I thrive in fast-paced environments, always aiming to deliver high-quality, impactful content. Let’s collaborate and create something amazing!
+                    </p>
                     <div class="social-media">
                         <a href="https://web.facebook.com/gtstvn/" target="_blank">
                             <i class='bx bxl-facebook' ></i></a>
@@ -151,7 +153,7 @@
             <div class="portfolio-container">
 
                 <div class="portfolio-box">
-                    <img src="images/webdevelopment.jpg" alt="">
+                    <img src="images/web development.jpg" alt="">
                     <div class="portfolio-layer">
                         <h4>Web Development</h4>
                         <p>I create modern and responsive websites tailored to your needs.</p>
@@ -196,7 +198,7 @@
                 </div>
     
                 <div class="portfolio-box">
-                    <img src="images/t4.png" alt="">
+                    <img src="images/film making.jpg" alt="">
                     <div class="portfolio-layer">
                         <h4>Film Making</h4>
                         <p>With my film making services, I bring stories to life through the power of visuals.</p>
