--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a href="#"><i class='bx bxl-linkedin' ></i></a>
                         
                     </div>
-                <a href="resources/EstevenGueta_Resume.pdf" download="Gueta Esteven (Resume)" class="btn">Download CV</a>
+                <a href="resources/ESTEVEN GUETA_2025_RESUME.pdf" download="Gueta Esteven (Resume)" class="btn">Download CV</a>
             </div>
         </div>
         <div class="home-img">
