--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
                 <h3>Hi, It's Me</h3>
                 <h1>Steven Gueta</h1>
                 <h3>I'm a <span>Creative Enthusiast</span></h3>
-                <p> I'm a creative enthusiast with a passion for bringing ideas to life through video editing, graphic design, videography, and web design. Whether it's crafting engaging visuals, telling compelling stories through video, or designing sleek and functional websites, I love turning concepts into reality.
-
-                    With experience in multimedia production, I thrive in fast-paced environments, always aiming to deliver high-quality, impactful content. Let’s collaborate and create something amazing!
+                <p> I'm a creative enthusiast with a passion for bringing ideas to life through video editing, graphic design, videography, and web design. Whether it's crafting engaging visuals or telling compelling stories through video, I love turning concepts into reality. With experience in multimedia production and administrative tasks, I thrive in fast-paced environments, always aiming to deliver high-quality, impactful content. Let’s collaborate and create something amazing!
                     </p>
                     <div class="social-media">
                         <a href="https://web.facebook.com/gtstvn/" target="_blank">
@@ -90,21 +88,10 @@
                 <h2 class="heading">About <span>Me</span></h2>
                 <h3>Frontend Developer</h3>
                     <div class="paragraph-container">
-                        <p>Welcome to my portfolio! I'm Esteven Gueta—although I typically spell my first name without the letter 'E' at the
-                            front to encourage pronunciation as 'is-tee-ven'—a passionate Frontend Developer specializing in CSS and JavaScript.
-                            My focus is on designing and creating visually appealing websites.</p>
-                        <p>I hold a Bachelor of Science degree in Information Technology from Sorsogon State University-Bulan Campus.
-                            Throughout my academic journey, I actively participated in Capstone research projects with my co-researchers,
-                            gaining valuable programming experience and honing my skills in frontend development using various programming
-                            languages.</p>
-                        <p>My mission is to provide clients with satisfying designs that perfectly suit their websites. I am captivated by
-                            the interplay of colors, aesthetics, and animations, as these are my areas of expertise. With a range of services
-                            offered, including frontend development, graphic design, photography, and photo and video editing, I assist clients
-                            in achieving their goals and objectives.</p>
-                        <p>Beyond work, I enjoy exercising and occasionally hitting the gym. In my free time, I find inspiration by watching 
-                            professional programmers on YouTube and indulging in movies. These activities contribute to maintaining a 
-                            well-rounded perspective, fueling my creativity in programming and nurturing my passion for filming and other 
-                            digital endeavors.</p>
+                        <p>Hi! I’m Esteven Gueta, a creative and detail-oriented multimedia professional with expertise in graphic design, video editing, photography, and videography. With years of experience in digital media, I specialize in bringing ideas to life through visually compelling content that engages and inspires.</p>
+                        <p>My journey started as a graphic artist and video editor, where I developed strong technical skills using Adobe Premiere Pro, Illustrator, After Effects, Canva, CapCut, and Filmora. I have also worked in printing and production, handling client requests, creating promotional materials, and managing social media pages. Additionally, my experience in sponsor communications, administrative tasks, and financial documentation has sharpened my organizational and business skills.</p>
+                        <p>Beyond design and editing, I create digital products such as busy books, customizable Canva templates, and creative assets to help brands and individuals elevate their content. Whether you need stunning visuals, expertly edited videos, or polished promotional materials, I am committed to delivering high-quality, professional, and creative solutions tailored to your needs.</p>
+                        <p>Let’s work together and bring your ideas to life!</p>
                     </div>
             </div>
         </div>
