--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a href="#"><i class='bx bxl-linkedin' ></i></a>
                         
                     </div>
-                <a href="resources/ESTEVEN GUETA_2025_RESUME.pdf" download="Gueta Esteven (Resume)" class="btn">Download CV</a>
+                <a href="resources/GUETA_ESTEVEN_RESUME.pdf" download="Gueta Esteven Resume" class="btn">Download CV</a>
             </div>
         </div>
         <div class="home-img">
