--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="about-content">
                 <h2 class="heading">About <span>Me</span></h2>
-                <h3>Frontend Developer</h3>
+                <h3>Multimedia Enthusiast</h3>
                     <div class="paragraph-container">
                         <p>Hi! I’m Esteven Gueta, a creative and detail-oriented multimedia professional with expertise in graphic design, video editing, photography, and videography. With years of experience in digital media, I specialize in bringing ideas to life through visually compelling content that engages and inspires.</p>
                         <p>My journey started as a graphic artist and video editor, where I developed strong technical skills using Adobe Premiere Pro, Illustrator, After Effects, Canva, CapCut, and Filmora. I have also worked in printing and production, handling client requests, creating promotional materials, and managing social media pages. Additionally, my experience in sponsor communications, administrative tasks, and financial documentation has sharpened my organizational and business skills.</p>
