pic ko na gwapo

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             </div>
         </div>
         <div class="home-img">
-            <img src="images/home1orig.png" alt="">
+            <img src="images/gtstvn_floating.png" alt="">
         </div>
     </section>
 
     <!-- about section-->
     <section class="about" id="about">
         <div class="about-img ">
-            <img src="images/aboutorig.png" alt="">
+            <img src="images/gtstvn_floating.png" alt="">
         </div>
 
         <div class="container">
