--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <ul>
                 <img class="navimage1" src="images/diamond.png" alt="">
             <a href="#home" class="active">Home</a>
+            <a href="#master">My Fav</a>
             <a href="#about">About</a>
             <!-- <a href="#services">Services</a> -->
             <a href="#portfolio">Portfolio</a>
@@ -74,6 +75,32 @@
         </div>
         <div class="home-img">
             <img src="images/gtstvn_floating.png" alt="">
+        </div>
+    </section>
+
+    <section class="masterpiece" id="masterpiece">
+        <div class="master-cont">
+            <h2 class="heading">My <span>Fav</span></h2>
+
+            <div class="fav-cont">
+                <div class="fav">
+                    <h1>Movie poster</h1>
+                    <img src="images/gd/PO/BIPOLAR FILM (POSTER).jpg" alt="">
+                </div>
+                <div class="fav">
+                    <img src="images/ve/bipolar.jpg" alt="">
+                    <h1>Movie trailer</h1>
+                </div>
+                <div class="fav">
+                    <h1>Company Logo</h1>
+                    <img src="images/gd/LG/BANANA TECH.PNG" alt="">
+                </div>
+                <div class="fav">
+                    <img src="https://scontent.fcrk3-2.fna.fbcdn.net/v/t39.30808-6/486283113_122216431532036158_8485860547623288787_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHuplv1j-sVGrWN2xrQsymhDfv-OOnmc4sN-_446eZzi30qJ9zYg0oaiU4NIVMUBC8pTCPFDAAvG6OhhQmY_Dyd&_nc_ohc=kupPQPGU83AQ7kNvgGb-sJt&_nc_oc=AdngEOtUiwtEWRvPzEpnk-E-uswsbHfS1RVMIVIih-xFJJCs-Rd2gsR7UIgJaZmjW15hmIfgZuKp802Djipb2A79&_nc_zt=23&_nc_ht=scontent.fcrk3-2.fna&_nc_gid=rCE5yxnEHIwtbH6gCszejQ&oh=00_AYHS7LtsM84YOW1rFg2KmIIbFUnk6oxJTE_z8RTRTOeGZQ&oe=67EDDBE9" alt="Image from facebook">
+                    <h1>Tarp design</h1>
+                </div>
+            </div>
+
         </div>
     </section>
 
