--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
                 <div></div>
             </label>
             
-            <ul>
+        <ul>
                 <img class="navimage1" src="images/diamond.png" alt="">
             <a href="#home" class="active">Home</a>
             <a href="#master">My Fav</a>
             <a href="#about">About</a>
-            <!-- <a href="#services">Services</a> -->
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </ul>
@@ -78,7 +77,7 @@
         </div>
     </section>
 
-    <section class="masterpiece" id="masterpiece">
+    <section class="masterpiece" id="master">
         <div class="master-cont">
             <h2 class="heading">My <span>Fav</span></h2>
 
