--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>GtSteve</title>
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- custom css-->
     <link rel="stylesheet" href="style.css">
